# instaDow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: build_exe.ps1
src/instadow/: cli.py  config.py  downloader.py
tests/: test_cli.py  test_productize.py
